zebra-rpc/src/methods/tests/snapshots/get_network_sol_ps@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: get_network_sol_ps
---
2
