zebra-rpc/src/methods/tests/snapshots/get_peer_info@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: get_peer_info
---
[
  {
    "addr": "127.0.0.1:18233",
    "services": "0000000000000001",
    "lastrecv": "[lastrecv]",
    "inbound": false,
    "banscore": 0,
    "subver": "/Zebra:2.1.0/",
    "version": "[version]",
    "connection_state": "connected"
  }
]
